src/js/components/avatar/style.css
:host {
	--avatar-size: 7rem;
	--mask-size: 1.22rem;
}

:host * {
	box-sizing: border-box;
	font-family: inherit;
}

#container {
	display: inline-grid;
	grid-template-columns: var(--avatar-size);
	grid-template-rows: var(--avatar-size);
	grid-template-areas: 'avatar';
	place-items: center;

	& > * { grid-area: avatar; }

	#image-wrapper {
		width: var(--avatar-size);
		height: var(--avatar-size);

		border: var(--border-medium) solid var(--inner-border-normal-color);
		border-radius: 100vmax;
		margin: var(--margin-medium);
		padding: var(--padding-small);

		background-clip: content-box;

		transition: all 0.2s ease-in-out;

		-webkit-mask-image: radial-gradient(circle var(--mask-size) at calc(100% - var(--mask-size)) calc(100% - var(--mask-size)), transparent var(--mask-size), black);
		pointer-events: none;

		& img {
			width: 100%;
			height: 100%;
			object-fit: cover;
			border-radius: 100vmax;
		}

		& svg {
			width: 100%;
			height: 100%;
			fill: var(--text-color);
		}
	}

	&:focus-within #image-wrapper {
		border-color: var(--inner-border-focus-color);
		background-color: var(--outer-border-focus-color);
		color: var(--dark-color);
		font-weight: bold;
	}
}

:host(:not([image])) img { display: none; }
:host([image]) svg { display: none; }

#status {
	align-self: end;
	justify-self: end;
	scale: 0.7;
	transform-origin: bottom right;
}

